--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <title>Astral Observer's Space</title>
+    </head>
     <body>
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
