--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Astral Observer's Space</title>
+        <meta content="text/html; charset=utf-8"
     </head>
     <body>
         <h1>Hello World</h1>
